# fabtracker

./: CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  PROJECT_LOG.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: mock_cards.json
src-tauri/icons/: icon.icns
src-tauri/src/: card.rs  catalog.rs  collection.rs  db.rs  deck.rs  imagecache.rs  lib.rs  main.rs  search.rs
src/components/: AboutButton.tsx  BinderBar.tsx  BinderMenu.tsx  CardDetail.tsx  CardGrid.tsx  CardList.tsx  CardTile.tsx  DataSourceButton.tsx  DeckEditor.tsx  DeckExport.tsx  DeckImport.tsx  DeckStats.tsx  DeckView.tsx  DecksTab.tsx  FilterPanel.tsx  NotesEditor.tsx  ResizablePane.tsx  SearchBar.tsx  ViewModeToggle.tsx
src/lib/: api.ts  deckExport.ts  decklist.ts  fab.ts  img.ts
src/types/: card.ts
