[package]
name = "fabtracker"
version = "0.3.0"
description = "Flesh and Blood collection & deck manager"
authors = ["Patrick Lipka"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fabtracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Self-update from GitHub Releases (signed); process plugin provides relaunch.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Native file pickers for database backup/restore + custom location.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP client for syncing official card data. rustls avoids a system OpenSSL
# dependency (cross-platform friendliness); gzip shrinks the ~20MB download.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
# Local persistence. `bundled` compiles SQLite in, so there's no system
# dependency. rusqlite_migration runs ordered, idempotent schema migrations.
rusqlite = { version = "0.40.0", features = ["bundled", "backup"] }
rusqlite_migration = "2.6.0"

[dev-dependencies]
# For the network-gated catalog integration test (cargo test -- --ignored).
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

